Edited run.sh